--- a/src/Honeywell.DataAccess/Honeywell.DataAccess.csproj
+++ b/src/Honeywell.DataAccess/Honeywell.DataAccess.csproj
@@ -11,4 +11,9 @@
       <ProjectReference Include="..\Honeywell.Utility\Honeywell.Utility.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.33" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.33" />
+    </ItemGroup>
+
 </Project>
