--- a/src/HoneywellWeb/HoneywellWeb.csproj
+++ b/src/HoneywellWeb/HoneywellWeb.csproj
@@ -17,4 +17,11 @@
       <ProjectReference Include="..\Honeywell.Utility\Honeywell.Utility.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.33">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
