--- a/src/Application/HoneywellWeb/HoneywellWeb.csproj
+++ b/src/Application/HoneywellWeb/HoneywellWeb.csproj
@@ -31,6 +31,8 @@
     <ItemGroup>
       <ProjectReference Include="..\..\Domain\Honeywell.DataAccess\Honeywell.DataAccess.csproj" />
       <ProjectReference Include="..\..\Infrastructure\Honeywell.Utility\Honeywell.Utility.csproj" />
+      <ProjectReference Include="..\..\Infrastructure\Service\Service.csproj" />
+      <ProjectReference Include="..\Service.Contracts\Service.Contracts.csproj" />
     </ItemGroup>
 
 </Project>
