Get FileSize in ViewVM

--- a/src/Domain/Honeywell.Models/Honeywell.Models.csproj
+++ b/src/Domain/Honeywell.Models/Honeywell.Models.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Infrastructure\Honeywell.Utility\Honeywell.Utility.csproj" />
+    </ItemGroup>
+
 </Project>
